--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@
 /BM-727_Project Management/Assignments
 
 /CS-716_Advanced NN/Assignments
+/CS-716_Advanced NN/SirSaqib-Nueral-Repo
 /CS-718_CV/Assignments
